# CENSO

./: .censorc  .git_archival.txt  .gitignore  .pre-commit-config.yaml  AGENTS.md  Pipfile  README.md  README.rst  censo  censo-runner.py  cml_test.py  core_test.py  dfasettings_test.py  environment.yaml  example.censo2rc  example_censo2rc  example_workflow.py  orca_parser_test.py  prescreening_test.py  ps.bu.py  pyproject.toml  settings_test.py  setup.cfg  startup_test.py  tox.ini
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/: basis_sets.json  censo_dfa_settings.json  wet-octanol_25.pot
censo/: __init__.py  censo.py  cfg.py  configuration.py  converter.py  core.py  datastructure.py  ensembledata.py  errors.py  errorswarnings.py  inputhandling.py  nmrproperties.py  opticalrotation.py  optimization.py  orca_job.py  orca_processor.py  parallel.py  params.py  part.py  prescreening.py  procfact.py  qm_job.py  qm_processor.py  screening.py  settings.py  startup.py  storage.py  tm_job.py  tm_processor.py  tutorial.py  utilities.py
censo/assets/: censo_dfa_settings.json  convert.py  hexadecane_25.pot  key_args_dict.json
censo/ensembleopt/: __init__.py  optimization.py  prescreening.py  screening.py
censo/optimization/: __init__.py  optimization.py  prescreening.py  screening.py
censo/parts/: optimization.py  part.py  prescreening.py  screening.py
censo_assets/: censo_solvents.json
censo_qm/: __main__.py  adf_job.py  censo.py  cfg.py  cheapscreening.py  datastructure.py  ensembledata.py  inputhandling.py  nmrproperties.py  opticalrotation.py  optimization.py  orca_job.py  parallel.py  prescreening.py  qm_job.py  refinement.py  setupcenso.py  tm_job.py  tutorial.py  utilities.py  uvvis.py
debug/: .censorc  censo_test.py  censorc_new  cml_test.py  core_test.py  dfasettings_test.py  settings_test.py  storage_test.py  test  test.py
debug/censo_test/: __main__.py  adf_job.py  caller.py  censo.py  cfg.py  core.py  datastructure.py  ensembledata.py  errorswarnings.py  inputhandling.py  opticalrotation.py  orca_job.py  orca_processor.py  parallel.py  part.py  prescreening.py  qm_job.py  qm_processor.py  refinement.py  settings.py  storage.py  test.py  tm_job.py  tm_processor.py  tutorial.py  utilities.py
debug/censo_test/assets/: censo_dfa_settings.json  censo_nmr_ref.json  solvents_dc.json
dev/: censo_test.py  cml_test.py  core_test.py  settings_test.py  storage_test.py  test.py
dev/censo/: censo.py  core.py  errorswarnings.py  inputhandling.py  opticalrotation.py  optimization.py  parallel.py  part.py  prescreening.py  refinement.py  settings.py  utilities.py  uvvis.py
dev/censo/assets/: censo_solvents_db.json  octanol_25.pot  solvents.json
docs/: documentation.rst  reference.bib
src/: __init__.py  __main__.py  censo.py  configuration.py  core.py  datastructure.py  orca_processor.py  parallel.py  part.py  procfact.py  qm_processor.py  utilities.py
src/assets/: censo_dfa_settings.json  se.bu.py
src/censo/: __init__.py  __main__.py  __version__.py  censo.py  configuration.py  core.py  data.py  datastructure.py  ensemble.py  ensembledata.py  inputhandling.py  logging.py  molecules.py  orca_processor.py  parallel.py  params.py  part.py  procfact.py  qm_processor.py  tm_processor.py  utilities.py
src/censo/assets/: __init__.py  assets.py  censo_dfa_settings.json  censo_nmr_ref.json  censo_solvents_db.json  convert.py  dfa.bu  dfa.json  hexadecane_25.pot  octanol_25.pot  old_solvents_db.json  se.bu.py  smd_solvents_old.json  solvents.json  solvents_new.json  wet-octanol_25.pot
src/censo/cli/: cml_parser.py  interface.py
src/censo/config/: __init__.py  generic.py  job_config.py  parallel_config.py  parts_config.py  paths.py  setup.py
src/ensembleopt/: __init__.py  optimization.py  prescreening.py  screening.py
test/: cml_test.py  conftest.py  core_test.py  dfasettings_test.py  orca_parser_test.py  prescreening_test.py  settings_test.py  startup_test.py  test_cli.py  test_core.py  test_ensembledata.py  test_logging.py  test_optimization.py  test_orca_parser.py  test_orca_processor.py  test_parallel.py
test/fixtures/: 2_OPTIMIZATION.xyz  4_NMR.json
test/integration/: conftest.py  test_prescreening.py  test_screening.py
test/test_cli/: test_interface.py
test/test_config/: test_base.py  test_general.py  test_nmr.py  test_optimization.py  test_parts.py  test_prescreening.py  test_refinement.py  test_screening.py  test_uvvis.py
test/test_ensembleopt/: test_prescreening.py  test_screening.py
test/unit/: conftest.py  test_ensemble.py  test_ensembledata.py  test_logging.py  test_parallel.py
testfiles/: test.template
tests/: dfasettings_test.py  settings_test.py  test_ensemble.py  test_orca_parser.py  test_parallel.py
tests/testfiles/: crest_conformers.xyz  inp
(+71 files in other folders)
