[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "censo"
dynamic = ["version", "readme"]
requires-python = ">= 3.10"

[project.urls]
homepage = "https://github.com/grimme-lab/CENSO"
documentation = "https://xtb-docs.readthedocs.io/en/latest/CENSO_docs/censo.html"

[project.optional-dependencies]
scripts = [
    "numpy",
    "matplotlib",
    "pandas"
]

[project.scripts]
censo = "censo.cli.interface:entry_point"
c2anmr = "censo.scripts.c2anmr:main"
uvvisplot = "censo.scripts.uvvisplot:main"
nmrplot = "censo.scripts.nmrplot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.setuptools_scm]
version_file = "src/censo/__version__.py"
