[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "censo"
dynamic = ["version", "readme"]
requires-python = ">= 3.12"
dependencies = [
  "tabulate",
  "pydantic"
]

[project.urls]
homepage = "https://github.com/grimme-lab/CENSO"
documentation = "https://xtb-docs.readthedocs.io/en/latest/CENSO_docs/censo.html"

[project.optional-dependencies]
scripts = [
    "numpy",
    "matplotlib",
    "pandas"
]
dev = [
  "pytest",
  "tox"
]

[project.scripts]
censo = "censo.cli.interface:entry_point"
c2anmr = "censo.scripts.c2anmr:main"
uvvisplot = "censo.scripts.uvvisplot:main"
nmrplot = "censo.scripts.nmrplot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.setuptools_scm]
version_file = "src/censo/__version__.py"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
markers = [
    "optional: mark test as optional (add --run-optional to run)",
    "requires_xtb: skip test if xtb is not available",
    "requires_orca: skip test if ORCA is not available",
    "requires_turbomole: skip test if Turbomole is not available",
    "requires_cosmotherm: skip test if COSMOtherm is not available",
]
