[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "censo"
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
  "tabulate",
  "pydantic",
  "dask",
  "distributed"
]

[project.urls]
homepage = "https://github.com/grimme-lab/CENSO"
documentation = "https://xtb-docs.readthedocs.io/en/latest/CENSO_docs/censo.html"

[project.optional-dependencies]
scripts = [
    "numpy",
    "matplotlib",
    "pandas"
]
dev = [
  "pytest",
  "tox",
  "mypy",
  "ruff",
  "black",
  "pre-commit",
  "types-tabulate",
  "pandas-stubs"
]

[project.scripts]
censo = "censo.cli.interface:entry_point"
c2anmr = "censo.scripts.c2anmr:main"
uvvisplot = "censo.scripts.uvvisplot:main"
nmrplot = "censo.scripts.nmrplot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/censo/__version__.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
markers = [
    "optional: mark test as optional (add --run-optional to run)",
    "requires_xtb: skip test if xtb is not available",
    "requires_orca: skip test if ORCA is not available",
    "requires_turbomole: skip test if Turbomole is not available",
    "requires_cosmotherm: skip test if COSMOtherm is not available",
]

[tool.mypy]
mypy_path = ["src"]
