[metadata]
name = censo
version = attr: censo.__version__.__version__

[options]
packages = find:
install_requires =
python_requires =
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =

[options.extras_require]
dev =

[options.package_data]
censo =
