[metadata]
name = censo
version = attr: censo.__version__.__version__
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    censo = censo.cli.interface:entry_point

[options.extras_require]
dev =

[options.package_data]
censo =
    assets/*